--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     </div>
                     <div class="hidden space-x-8 md:flex md:ml-10">
 
-                        <a href="/features" class="text-base font-medium text-white hover:text-gray-300">Features</a>
+                        <a href="features" class="text-base font-medium text-white hover:text-gray-300">Features</a>
 
-                        <a href="/about" class="text-base font-medium text-white hover:text-gray-300">Company</a>
+                        <a href="about" class="text-base font-medium text-white hover:text-gray-300">Company</a>
                     </div>
                 </div>
                 <div class="hidden md:flex md:items-center md:space-x-6">
